# planetary_terrain_renderer

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: plan-task.yml  plan-tracker.yml
.github/workflows/: quickstart.yml
assets/shaders/: spherical.wgsl
docs/: agent-orchestration-plan-2026-03-07.md  bevy_0_18_migration_handoff_2026-03-06.md  correctness_metrics.md  earth_streaming_cache_contract_2026-03-09.md  earth_streaming_orchestration_plan_2026-03-09.md  earth_streaming_tier1_packets_2026-03-09.md  geo-coordinate-api-plan.md  getting_started.md  github-issue-workflow.md  imagery_lod_seam_fix.md  multires_workflow.md  performance_benchmarking.md  performance_findings_2026-03-07.md  physical_truth_findings_2026-03-07.md  physical_truth_mapping_audit_2026-03-07.md  physical_truth_orchestration_plan_2026-03-07.md  review_feedback_2026-03-05.md  saxony_workflow.md
examples/: minimal_globe.rs  precision_demo.rs  spherical.rs  spherical_multires.rs  streaming_warmup_globe.rs
examples/spherical_multires/: benchmark.rs  click.rs  demo.rs
preprocess/: Cargo.toml
preprocess/src/: cli.rs  lib.rs  (+8 more)
sample_data/: README.md  gebco_earth_mini.tif  true_marble_mini.tif
scripts/: benchmark_spherical_multires.sh  compare_renderer_to_source_raster.py  compare_small_world_ground.py  download_saxony_dgm1.sh  path_truth_regression.py  physical_truth_matrix.py  redownload_saxony_dgm1.sh  setup_earth_quickstart.sh  setup_saxony_partial_demo.sh
src/: lib.rs  perf.rs  plugin.rs  simple.rs  spawn.rs  terrain.rs
(+303 files in other folders)
